Fix spelling issues

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Hi! I'm Emile Pascoe.</h1>
-							<p class="major">A creative technologist with a passion of people and the machines they interact with. Game engines are my are true ❤️ but each platform is a new romance. Let's make something beautiful together!</p>
+							<p class="major">A creative technologist with a passion for people and the machines they interact with. Game engines are my are true ❤️ but each platform is a new romance. Let's make something beautiful together!</p>
 						</div>
 						<div class="image">
 							<img src="images/banner.jpg" alt="" />
@@ -38,7 +38,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Emerge from the Ordinary</h2>
-							<p> Bolon needed a VR experience that would let users feel their flooring with their own eyes. As tech lead on the project made using Unreal Engine I helped to make it a reality.</p>
+							<p> Bolon needed a VR experience that would let users feel their flooring with their own eyes. As tech lead on the project, made using Unreal Engine, I helped to make it a reality.</p>
 							<ul class="actions stacked">
 								<li><a href="https://vimeo.com/500800397" class="button">Watch</a></li>
 							</ul>
@@ -66,9 +66,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Abstracta's Virtual Showroom</h2>
-							<p>When showcasing a soundscape, a picture isn't always enough you need to be there. That's why as Tech Lead for  Abstracta's virtual showroom, the team at MER Architects and I made a VR laboratory where sound could be experienced in real time
+							<p>When showcasing a soundscape, a picture isn't always enough you need to be there. That's why as Tech Lead for Abstracta's virtual showroom, the team at MER Architects and I made a VR laboratory where sound could be experienced in real time.
 							<ul class="actions stacked">
-								<li><a href="https://abstracta.se/sv/" class="button">Read</a></li>
+								<li><a href="https://abstracta.se/sv/welcome-to-abstractas-vr-exhibition-space/" class="button">Read</a></li>
 							</ul>
 						</div>
 						<div class="image">
